--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+a {
+  color: #333;
+  text-decoration: none;
+}
+/* Active route */
+.active {
+  color: #005bb3;
+}
+
 .wrapper {
   width: 100%;
   padding: 8rem 20px 3rem;
